test/types/sync/ferguson/sync-coerce-to-ref.good
sync-coerce-to-ref.chpl:5: In function 'test':
sync-coerce-to-ref.chpl:10: error: in call to 'acceptRef', cannot pass result of coercion by reference
sync-coerce-to-ref.chpl:10: note: implicit coercion from 'sync int(64)' to 'int(64)'
sync-coerce-to-ref.chpl:1: note: when passing to 'ref' intent formal 'arg'
